{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 187,
  "lineage": "1d4cae8b-52f6-91c3-f43c-bcc484d3d317",
  "resources": [
    {
      "module": "module.nat_gateways",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09be25249eb03938a",
            "domain": "vpc",
            "id": "eipalloc-09be25249eb03938a",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-31-243-101.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.31.243.101",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0778213db128b582f",
            "domain": "vpc",
            "id": "eipalloc-0778213db128b582f",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-99-80-159-64.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.80.159.64",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateways",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09be25249eb03938a",
            "association_id": "eipassoc-0410fdbe4a1a07901",
            "connectivity_type": "public",
            "id": "nat-0b277845ce9eb0f60",
            "network_interface_id": "eni-020e144634c722d58",
            "private_ip": "10.0.1.30",
            "public_ip": "52.31.243.101",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0035e76a4c825f671",
            "tags": {
              "Name": "aws_nat_gateway 1",
              "createdBy": "Project VPC",
              "managedBy": "Terraform",
              "owner": "Shashi Singh"
            },
            "tags_all": {
              "Name": "aws_nat_gateway 1",
              "createdBy": "Project VPC",
              "managedBy": "Terraform",
              "owner": "Shashi Singh"
            }
          },
          "dependencies": [
            "module.nat_gateways.aws_eip.natgw",
            "module.public_subnets.module.subnets.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0778213db128b582f",
            "association_id": "eipassoc-0833595484bd4d161",
            "connectivity_type": "public",
            "id": "nat-0b0a085e96c957d28",
            "network_interface_id": "eni-0c9bbbfb188243a07",
            "private_ip": "10.0.1.240",
            "public_ip": "99.80.159.64",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03fce5c20718efa31",
            "tags": {
              "Name": "aws_nat_gateway 2",
              "createdBy": "Project VPC",
              "managedBy": "Terraform",
              "owner": "Shashi Singh"
            },
            "tags_all": {
              "Name": "aws_nat_gateway 2",
              "createdBy": "Project VPC",
              "managedBy": "Terraform",
              "owner": "Shashi Singh"
            }
          },
          "dependencies": [
            "module.nat_gateways.aws_eip.natgw",
            "module.public_subnets.module.subnets.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01e13ca6bcb1d4aab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b277845ce9eb0f60",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01e13ca6bcb1d4aab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateways.aws_eip.natgw",
            "module.nat_gateways.aws_nat_gateway.natgw",
            "module.private_subnets.module.subnets.aws_route_table.default",
            "module.public_subnets.module.subnets.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a33144f2dff9232e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b0a085e96c957d28",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a33144f2dff9232e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateways.aws_eip.natgw",
            "module.nat_gateways.aws_nat_gateway.natgw",
            "module.private_subnets.module.subnets.aws_route_table.default",
            "module.public_subnets.module.subnets.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnets.module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:932637183066:route-table/rtb-01e13ca6bcb1d4aab",
            "id": "rtb-01e13ca6bcb1d4aab",
            "owner_id": "932637183066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de20b2b8fa589fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:932637183066:route-table/rtb-0a33144f2dff9232e",
            "id": "rtb-0a33144f2dff9232e",
            "owner_id": "932637183066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de20b2b8fa589fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnets.module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083cb0f50d5dd70a0",
            "route_table_id": "rtb-01e13ca6bcb1d4aab",
            "subnet_id": "subnet-057855ca38bbbda5f"
          },
          "dependencies": [
            "module.private_subnets.module.subnets.aws_route_table.default",
            "module.private_subnets.module.subnets.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f893f4ebf1e8dae",
            "route_table_id": "rtb-0a33144f2dff9232e",
            "subnet_id": "subnet-0427b97e9d92aa584"
          },
          "dependencies": [
            "module.private_subnets.module.subnets.aws_route_table.default",
            "module.private_subnets.module.subnets.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnets.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:932637183066:subnet/subnet-057855ca38bbbda5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057855ca38bbbda5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932637183066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-09de20b2b8fa589fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:932637183066:subnet/subnet-0427b97e9d92aa584",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0427b97e9d92aa584",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932637183066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-09de20b2b8fa589fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06a2720b59d74ac61",
            "id": "r-rtb-015ad84f9cb33d3ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-015ad84f9cb33d3ce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnets.module.subnets.aws_route_table.default",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06a2720b59d74ac61",
            "id": "r-rtb-07423a97e22f1ec7b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07423a97e22f1ec7b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnets.module.subnets.aws_route_table.default",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets.module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:932637183066:route-table/rtb-015ad84f9cb33d3ce",
            "id": "rtb-015ad84f9cb33d3ce",
            "owner_id": "932637183066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de20b2b8fa589fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:932637183066:route-table/rtb-07423a97e22f1ec7b",
            "id": "rtb-07423a97e22f1ec7b",
            "owner_id": "932637183066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de20b2b8fa589fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets.module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a716908448195890",
            "route_table_id": "rtb-015ad84f9cb33d3ce",
            "subnet_id": "subnet-0035e76a4c825f671"
          },
          "dependencies": [
            "module.public_subnets.module.subnets.aws_route_table.default",
            "module.public_subnets.module.subnets.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00aa8f38fdc11eeaa",
            "route_table_id": "rtb-07423a97e22f1ec7b",
            "subnet_id": "subnet-03fce5c20718efa31"
          },
          "dependencies": [
            "module.public_subnets.module.subnets.aws_route_table.default",
            "module.public_subnets.module.subnets.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:932637183066:subnet/subnet-0035e76a4c825f671",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0035e76a4c825f671",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932637183066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-09de20b2b8fa589fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:932637183066:subnet/subnet-03fce5c20718efa31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fce5c20718efa31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932637183066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-09de20b2b8fa589fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:932637183066:route-table/rtb-0c887c0b1514af40a",
            "default_route_table_id": "rtb-0c887c0b1514af40a",
            "id": "rtb-0c887c0b1514af40a",
            "owner_id": "932637183066",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de20b2b8fa589fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:932637183066:internet-gateway/igw-06a2720b59d74ac61",
            "id": "igw-06a2720b59d74ac61",
            "owner_id": "932637183066",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            },
            "vpc_id": "vpc-09de20b2b8fa589fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:932637183066:vpc/vpc-09de20b2b8fa589fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba661329a93b59a4",
            "default_route_table_id": "rtb-0c887c0b1514af40a",
            "default_security_group_id": "sg-0a178c7939efd469f",
            "dhcp_options_id": "dopt-05368e3d1cf212444",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09de20b2b8fa589fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c887c0b1514af40a",
            "owner_id": "932637183066",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}